# bloom

./: README.md
FHEBLOOM/: CMakeLists.txt
FHEBLOOM/bloomfiltering/: bloomfiltering_config.py  bloomfiltering_database.py  bloomfiltering_query.py
FHEBLOOM/libs_conf/HElib/: Makefile
FHEBLOOM/src/: CMakeLists.txt  commandline.cpp  commandline.h  fhebloom_client.cpp  fhebloom_config.cpp  fhebloom_config.h  fhebloom_server.cpp
PHEBLOOM/: network.py  paillier.py  phebloom_client.py  phebloom_server.py  util.py
data/bloom_database/: database_0_10000
data/bloom_query/: query_10000
data/vcf_database/: RCV000015246_10000.vcf
data/vcf_query/: multi_query.vcf
